# arxiv-to-code

./: .gitignore  README.md  pyproject.toml
arxiv_to_code/: __init__.py  builder.py  impl_checker.py  pipeline.py  publisher.py  scanner.py  scorer.py  state.py
tests/: conftest.py  test_impl_checker.py  test_pipeline.py  test_scanner.py  test_scorer.py
