[project]
name = "arxiv-to-code"
version = "0.1.0"
description = "Autonomous pipeline: arXiv papers → working code implementations"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=arxiv_to_code --cov-report=term-missing"
